--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,6 +20,8 @@ jobs:
       - run:
           name: Run Gatling Simulation
           command: |
+            mkdir -p /opt/
+            chmod -R 777 /opt/
             /opt/gatling-charts-highcharts-bundle-3.11.2/bin/gatling.sh -s CalculatorSimulation
 
 workflows:
