--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ version: 2.1
 executors:
   default:
     docker:
-      - image: cimg/openjdk:21.0.2
+      - image: quay.io/hemanth22/rockylinux9
 
 jobs:
   build:
@@ -13,8 +13,8 @@ jobs:
       - run:
           name: Install Dependencies
           command: |
-            sudo apt-get update
-            sudo apt-get install -y wget unzip
+            dnf install -y wget unzip
+            sudo apt-get install -y wget unzip java-1.8.0-openjdk-devel java-11-openjdk-devel
             wget -U "Any User Agent" https://repo1.maven.org/maven2/io/gatling/highcharts/gatling-charts-highcharts-bundle/3.6.1/gatling-charts-highcharts-bundle-3.6.1-bundle.zip
             unzip gatling-charts-highcharts-bundle-3.6.1-bundle.zip
             java -version
