--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,7 +24,7 @@ jobs:
             chmod -R 777 gatling-charts-highcharts-bundle-3.6.1
             mkdir -p gatling-charts-highcharts-bundle-3.6.1/user-files/simulations/calculatoronline
             cp -v CalculatorSimulation.scala gatling-charts-highcharts-bundle-3.6.1/user-files/simulations/calculatoronline/
-            gatling-charts-highcharts-bundle-3.6.1/bin/gatling.sh -s CalculatorSimulation
+            gatling-charts-highcharts-bundle-3.6.1/bin/gatling.sh -s CalculatorSimulation.scala
 
 workflows:
   version: 2
