--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,6 +25,11 @@ jobs:
             mkdir -p gatling-charts-highcharts-bundle-3.6.1/user-files/simulations/calculatoronline
             cp -v CalculatorSimulation.scala gatling-charts-highcharts-bundle-3.6.1/user-files/simulations/calculatoronline/
             gatling-charts-highcharts-bundle-3.6.1/bin/gatling.sh -s calculatoronline.CalculatorSimulation
+            mkdir -p /tmp/artifacts
+            tar -cvf /tmp/artifacts/loadtest.tar gatling-charts-highcharts-bundle-3.6.1/results/
+          name: Results artefacts
+      - store_artifacts:
+          path: /tmp/artifacts
 
 workflows:
   version: 2
